--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apifi-sqlite",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Serve API Routes with SQLite",
   "main": "dist/serve.js",
   "bin": {
-    "apifi-sqlite": "./bin/bin.js"
+    "apifi-sqlite": "bin/bin.js"
   },
   "jest": {
     "testEnvironment": "node",
